SSE update
